crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__view__tests__expanded.snap
---
source: crates/diffo-app/src/explorer/view.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 6 },
    content: [
        "┌ Explorer ───────────     ┐",
        "│ directory                │",
        "│   nested                 │",
        "│    plain.rs               │",
        "│  file.txt                 │",
        "└────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 0, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 29, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 1, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
