crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__view__tests__horizontal_pan_keeps_the_gutter_and_renders_control_text_inertly.snap
---
source: crates/diffo-app/src/explorer/view.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 3 },
    content: [
        "┌  wide.txt──────────────────┐",
        "│   1   ␛[2JPAN_TARGET       │",
        "└══█████████████████████████─┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(248, 248, 242), bg: Indexed(235), underline: Reset, modifier: DIM,
        x: 6, y: 1, fg: Rgb(248, 248, 242), bg: Indexed(235), underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
