crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__view__tests__rust_keywords_use_the_diff_foreground_without_background_or_modifiers.snap
---
source: crates/diffo-app/src/explorer/view.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 5 },
    content: [
        "┌  main.rs─────────────────────────────┐",
        "│   1   fn main() {}                   │",
        "│                                      │",
        "│                                      │",
        "└──────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Rgb(102, 217, 239), bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Rgb(248, 248, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Rgb(166, 226, 46), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Rgb(248, 248, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
