crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__view__tests__rust_keywords_use_the_monokai_foreground_on_the_shared_dark_surface.snap
---
source: crates/diffo-app/src/explorer/view.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 5 },
    content: [
        "┌  main.rs─────────────────────────────┐",
        "│   1   fn main() {}                   │",
        "│                                      │",
        "│                                      │",
        "└──────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(248, 248, 242), bg: Indexed(235), underline: Reset, modifier: DIM,
        x: 6, y: 1, fg: Rgb(248, 248, 242), bg: Indexed(235), underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Rgb(102, 217, 239), bg: Indexed(235), underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Rgb(248, 248, 242), bg: Indexed(235), underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Rgb(166, 226, 46), bg: Indexed(235), underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Rgb(248, 248, 242), bg: Indexed(235), underline: Reset, modifier: NONE,
        x: 38, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(248, 248, 242), bg: Indexed(235), underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(248, 248, 242), bg: Indexed(235), underline: Reset, modifier: NONE,
        x: 38, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
