crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__view__tests__skeleton_renders_line_numbers_without_text_or_markers.snap
---
source: crates/diffo-app/src/explorer/view.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 4 },
    content: [
        "┌  pending.rs──────────────────────────┐",
        "│   1                                  │",
        "│                                      │",
        "└──────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
