crates/diffo-app/src/explorer/snapshots/diffo_app__explorer__view__tests__viewer_title_matches_the_committed_tree_label.snap
---
source: crates/diffo-app/src/explorer/view.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 4 },
    content: [
        "┌deleted.rs─────────────────┐",
        "│                            │",
        "│                            │",
        "└────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
